<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Film n\' Drink</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="StartFragmentHeader">Film n\' Drink!</string>
    <string name="FilmSelectFragmentHeader">Film n\' Drink!</string>
    <string name="next">Start</string>
    <string name="previous">Previous</string>
    <string name="test">Temp</string>
    <string name="hello_first_fragment">Willkommen bei Film n\' Drink!</string>
    <string name="Instruction">Drücke auf Start und wähle den Film, den du schauen möchtest.</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="film1">The Grand Tour Staffel 4/4</string>
    <string name="film2">Film2</string>
    <string name="film3">Film3</string>
    <string name="film4">Film4</string>
    <string name="film5">Film5</string>
    <string name="film6">Film6</string>
    <string name="film7">Film7</string>
    <string name="film8">Film8</string>
    <string name="film9">Film9</string>
    <string name="film10">Film10</string>
    <string name="film11" tools:ignore="Typos">Film11</string>
    <string name="film12">Film12</string>
    <string name="film13">Film13</string>
    <string name="film14">Film14</string>
    <string name="film15">Film15</string>
    <string name="film16">Film16</string>
    <string name="film17">Film17</string>
    <string name="film18">Film18</string>
    <string name="senden">Senden</string>
    <string name="Nachricht">Nachricht</string>
    <string name="betreff">Betreff</string>
    <string name="missingMovie">Ist der gesuchte Film nicht vorhanden?</string>
    <string name="DifficultyFragmentHeader">Schwierigkeit</string>
    <string name="EmailSendFragmentHeader">Email senden</string>
    <string name="myEmail">valentin2002.pf@gmail.com</string>
    <string name="ChooseEmailApp">Wähle eine App um die E-Mail zu versenden</string>
    <string name="ChooseDifficulty">Bitte wähle eine Schwierigkeitsstufe</string>
    <string name="ChooseMovie">Bitte wähle einen Film</string>
    <string name="test12312">test</string>
</resources>