<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.FilmSelectFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginEnd="-5dp"
        android:alpha="0"
        android:src="@drawable/arrow_bg2"
        app:layout_constraintBottom_toTopOf="@+id/btn_feedback"
        app:layout_constraintEnd_toStartOf="@+id/btn_feedback"
        app:tint="@color/light_grey"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/missingmovie"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:background="@drawable/roundedcorner"
        android:padding="5dp"
        android:text="@string/missingMovie"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView" />

    <Button
        android:id="@+id/btn_feedback"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="20sp"
        android:background="@drawable/roundedbutton"
        app:cornerRadius="100dp"
        app:icon="@drawable/ic_email_white_18dp"
        app:iconGravity="textEnd"
        app:iconPadding="0dp"
        app:iconSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </SearchView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/film1"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/film1"
                    android:textColor="?attr/android:textColor"/>

                <Button
                    android:id="@+id/film2"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/film2"
                    android:textColor="?attr/android:textColor"/>

                <Button
                    android:id="@+id/film3"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/film3"
                    android:textColor="?attr/android:textColor"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:id="@+id/film4"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/film4"
                    android:textColor="?attr/android:textColor"/>

                <Button
                    android:id="@+id/film5"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/film5"
                    android:textColor="?attr/android:textColor"/>

                <Button
                    android:id="@+id/film6"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/film6"
                    android:textColor="?attr/android:textColor"/>

                <Button
                    android:id="@+id/film7"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/film7"
                    android:textColor="?attr/android:textColor"/>

                <Button
                    android:id="@+id/film8"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/film8"
                    android:textColor="?attr/android:textColor"/>

                <Button
                    android:id="@+id/film9"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/film9"
                    android:textColor="?attr/android:textColor"/>

                <Button
                    android:id="@+id/film10"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/film10"
                    android:textColor="?attr/android:textColor"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:id="@+id/film11"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/film11"
                    android:textColor="?attr/android:textColor"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:id="@+id/film12"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/film12"
                    android:textColor="?attr/android:textColor"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:id="@+id/film13"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/film13"
                    android:textColor="?attr/android:textColor"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:id="@+id/film14"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/film14"
                    android:textColor="?attr/android:textColor"/>

                <Button
                    android:id="@+id/film15"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/film15"
                    android:textColor="?attr/android:textColor"/>

                <Button
                    android:id="@+id/film16"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/film16"
                    android:textColor="?attr/android:textColor"/>

                <Button
                    android:id="@+id/film17"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/film17"
                    android:textColor="?attr/android:textColor"/>

                <Button
                    android:id="@+id/film18"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/film18"
                    android:textColor="?attr/android:textColor"/>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>